@@ -10,6 +10,8 @@ Revision 4.4.2, released 2017-11-XX
 - Added support for some more missing fields of SMIv2 MACRO types
 - Example scripts rearranged in a way that IPv6 requirement is
   clearly encoded in the script's name
+- Fixed SNMPv2-SMI.NotificationType to expose .set/getReference()
+  instead of .set/getRevision() which
 - Fixed non-implied-OID encoding in SNMP table indices
 - Fixed inconsistent SNMPv3 discovery and retrying algorithm
 
